// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Pashto On Demand TV Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`AMP Pashto On Demand TV Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Pashto On Demand TV Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Pashto On Demand TV Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=68&p=pashto.bbc_pashto_tv.tv.w172xcldhhrhmcf.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:pips:w172xcldhhrhmcf]&x2=[amp]&x3=[news-pashto]&x4=[ps]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[نړۍ+دا+وخت+-+BBC+News+پښتو]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Pashto On Demand TV Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Pashto, Pashto - TV",
    "title": "نړۍ دا وخت - BBC News پښتو",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Pashto On Demand TV Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP Pashto On Demand TV Page Expired Episode I can see the 'Content is not available' placeholder 1`] = `"دغه فایل نور د لاسرسي وړ نه دی."`;

exports[`AMP Pashto On Demand TV Page Expired Episode I can see the brand title 1`] = `"نړۍ دا وخت"`;

exports[`AMP Pashto On Demand TV Page Expired Episode I can see the episode summary 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`AMP Pashto On Demand TV Page Expired Episode I can see the episode title 1`] = `"۲۸ می ۲۰۲۰"`;

exports[`AMP Pashto On Demand TV Page Expired Episode a11y Assistive technology reads the brand and episode title as the headline 1`] = `"نړۍ دا وخت, ۲۸ می ۲۰۲۰"`;

exports[`AMP Pashto On Demand TV Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`AMP Pashto On Demand TV Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 2`] = `
Object {
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 3`] = `
Object {
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 4`] = `
Object {
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 5`] = `
Object {
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 7`] = `
Object {
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/institutional-37622768",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Pashto On Demand TV Page Footer Link should match text and url 9`] = `
Object {
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Pashto On Demand TV Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "کور پاڼه",
  "url": "/pashto",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "افغانستان",
  "url": "/pashto/afghanistan",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "پښتونخوا",
  "url": "/pashto/topics/cz74k7wy49jt",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "نړۍ",
  "url": "/pashto/world",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "ښځې",
  "url": "/pashto/topics/e45cb5f8-3c87-4ebd-ac1c-058e9be22862",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "لوبې",
  "url": "/pashto/sport",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "ويډيوګانې",
  "url": "/pashto/media/video",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "ځانګړې پاڼې",
  "url": "/pashto/in_depth",
}
`;

exports[`AMP Pashto On Demand TV Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "کالم",
  "url": "/pashto/columns",
}
`;

exports[`AMP Pashto On Demand TV Page I can see the brand title 1`] = `"نړۍ دا وخت"`;

exports[`AMP Pashto On Demand TV Page I can see the episode summary 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`AMP Pashto On Demand TV Page I can see the episode title 1`] = `"۲۸ می ۲۰۲۰"`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/pashto/images/icons/icon-192x192.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-128x128.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-152x152.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-180x180.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-384x384.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png",
}
`;

exports[`AMP Pashto On Demand TV Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf"`;

exports[`AMP Pashto On Demand TV Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Pashto On Demand TV Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Pashto On Demand TV Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Pashto On Demand TV Page SEO Heading level 1 1`] = `"نړۍ دا وخت, ۲۸ می ۲۰۲۰"`;

exports[`AMP Pashto On Demand TV Page SEO Lang attribute 1`] = `"ps"`;

exports[`AMP Pashto On Demand TV Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf",
        "@type": "WebPage",
        "name": "نړۍ دا وخت",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
          "width": 1024,
        },
        "name": "BBC News پښتو",
        "publishingPrinciples": "https://www.bbc.com/pashto/institutional-49283007",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
      "url": "http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf",
    },
  ],
}
`;

exports[`AMP Pashto On Demand TV Page SEO OG description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`AMP Pashto On Demand TV Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`AMP Pashto On Demand TV Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page SEO OG locale 1`] = `"ps"`;

exports[`AMP Pashto On Demand TV Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page SEO OG title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page SEO OG type 1`] = `"website"`;

exports[`AMP Pashto On Demand TV Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf"`;

exports[`AMP Pashto On Demand TV Page SEO Page title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`AMP Pashto On Demand TV Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`AMP Pashto On Demand TV Page SEO Twitter title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`AMP Pashto On Demand TV Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"نړۍ دا وخت, ۲۸ می ۲۰۲۰"`;
